--- a/danes_conf.css
+++ b/danes_conf.css
@@ -121,7 +121,19 @@ article h3 {
   margin-bottom: 0.2em;
   font-size: 1.5em;
   font-family: monospace;
+  color: #FF1964;
 }
+
+article h4 {
+    font-size: 2em;
+    font-family: monospace;
+    color: #FF1964;
+  }
+
+article h5 {
+    margin-bottom: 0.1em;
+    font-size: 1em;
+  }
 
 article blockquote {
   margin: 1em;
