--- a/danes_conf.css
+++ b/danes_conf.css
@@ -33,7 +33,7 @@ nav {
   justify-content: center;
   height: 70px;
   font-size: 1.5em;
-  background: linear-gradient(90deg, #fff 0%, #000 20%, #000000 80%, #fff 100%);
+  background: #383838;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   z-index: 10;
 }
@@ -121,13 +121,13 @@ article h3 {
   margin-bottom: 0.2em;
   font-size: 1.5em;
   font-family: monospace;
-  color: #000000;
+  color: #383838;
 }
 
 article h4 {
     font-size: 2em;
     font-family: monospace;
-    color: #000000;
+    color: #383838;
   }
 
 article h5 {
