--- a/danes_conf.css
+++ b/danes_conf.css
@@ -209,3 +209,12 @@ article#contact { }
 article#contact a {
   text-decoration: none;
 }
+
+img {
+    width:  210px;
+    height: 210px;
+    /*Scale down will take the necessary specified space that is 100px x 100px without stretching the image*/
+    object-fit:scale-down;
+    }
+
+
